[gd_scene load_steps=5 format=3 uid="uid://151p2wp14a3p"]

[ext_resource type="Script" uid="uid://d07c4yajf0r8t" path="res://scenes/pickable_object.gd" id="1_0l3f1"]
[ext_resource type="Texture2D" uid="uid://tw8t38ns0seh" path="res://icon.svg" id="1_thpd4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0l3f1"]
radius = 19.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gl7hy"]
radius = 34.0147

[node name="PickableObject" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_0l3f1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_thpd4")

[node name="CollisionAreaShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0l3f1")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="PickupAreaShape" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_gl7hy")
